# texture_haptic

./: README.md
AI_Model/: AI_model_TS.ipynb  AI_model_TS_testing.ipynb  Classification.py  EvaluateCode.py  ReadMe_FYP.md  Untitled.ipynb
AI_Model/.ipynb_checkpoints/: AI_model_TS-checkpoint.ipynb  AI_model_TS_testing-checkpoint.ipynb  Classification-checkpoint.py  Data_Preprocess-checkpoint.py  EvaluateCode-checkpoint.py
data_processing/: AI Model.ipynb  Data_pre_processing.ipynb  Feature Extraction.ipynb  Position Tracking Validation.ipynb  data_visulalization.ipynb
data_processing/.ipynb_checkpoints/: Data_pre_processing-checkpoint.ipynb  data_visulalization-checkpoint.ipynb
sdk_826_linux/: Makefile  README  README.fedora  readme.md
sdk_826_linux/demo/: Makefile  orginal_s826_example.c  s826_example.c  s826_example_BLC.c  s826_example_BLC_EFR.c  s826demo
sdk_826_linux/driver/: .Module.symvers.cmd  .modules.order.cmd  .s826.ko.cmd  .s826.mod.cmd  .s826.mod.o.cmd  .s826.o.cmd  10-local-826.rules  826api.h  Makefile  modules.order  s826.c  s826.ko  s826.mod  (+1 more)
sdk_826_linux/middleware/: 826const.h  826drv.c  826drv.h  826drv_linux.c  826lib.c  CMakeLists.txt  Makefile  StdAfx.h  platform.h  platform_linux.c  resource.h  s826.def  s826.sln  s826.vcproj  s826dll.aps  s826dll.rc  s826ioctl.h  s826ioctl_linux.h  version.h
sdk_826_linux/middleware/Release/: s826.lib
sdk_826_linux/middleware/Release64/: s826.lib
sdk_826_linux/middleware/example/: s826_example.c
sdk_826_linux/middleware/test/: s826_periodic_timer.c  test.c  test.sln  test.vcproj  test_linux.c
(+19 files in other folders)
